<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#000000"
    android:layout_height="match_parent"
    tools:context=".actprincipal">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="410dp"
        android:layout_height="70dp"
        android:background="#313131"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/placeholder"
            app:srcCompat="@drawable/castor" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:text="@string/bienvenida"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Botones"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F78F1E"
            android:text="@string/btnvolver"
            android:textColor="#0067B2" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/Botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lista-titulo"
                    android:layout_width="410dp"
                    android:layout_height="50dp"
                    android:background="#F78F1E"
                    android:gravity="center_vertical|end"
                    android:text="@string/titulolista"
                    android:textAlignment="center"
                    android:textColor="#0067B2"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:id="@+id/lista-cuerpo"
                    android:layout_width="410dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header">

                    <TextView
                        android:id="@+id/txtListaProfesores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />
                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Buscador"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/buscador-titulo"
                    android:layout_width="410dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="#F78F1E"
                    android:gravity="center_vertical|end"
                    android:text="@string/titulobuscador"
                    android:textAlignment="center"
                    android:textColor="#0067B2"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ingnomprof"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Encabezado" />

                <EditText
                    android:id="@+id/txtNombreProf"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/selmat"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNombreProf" />

                <Spinner
                    android:id="@+id/spMateria"
                    android:layout_width="390dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/selarea"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spMateria" />

                <Spinner
                    android:id="@+id/spArea"
                    android:layout_width="390dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/selsec"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spArea" />

                <LinearLayout
                    android:id="@+id/CheckBoxes"
                    android:layout_width="390dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17">

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/cking"
                        android:textAlignment="center" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/cktec"
                        android:textAlignment="center" />
                </LinearLayout>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:background="#F78F1E"
                    android:text="@string/btnaceptar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Agregar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/agregar-titulo"
                android:layout_width="410dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="#F78F1E"
                android:gravity="center_vertical|end"
                android:text="@string/tituloagregar"
                android:textAlignment="center"
                android:textColor="#0067B2"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>